Bug 131543 - VIEWING Output on the display is wrongly rendered when Skia is enabled and OpenGL is activated
Summary: VIEWING Output on the display is wrongly rendered when Skia is enabled and Op...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-03-24 16:35 UTC by Stefan_Lange_KA@T-Online.de
Modified: 2020-03-26 06:22 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
zip file with 4 screenshots to show the problem (1.20 MB, application/x-zip-compressed)
2020-03-24 16:35 UTC, Stefan_Lange_KA@T-Online.de
Details
zip file with 2 screenshots from Writer to show the problem (981.52 KB, application/x-zip-compressed)
2020-03-24 18:06 UTC, Stefan_Lange_KA@T-Online.de
Details
new zip file with screenshots to show the problem, other both zip files are obsolete (4.72 MB, application/x-zip-compressed)
2020-03-24 22:17 UTC, Stefan_Lange_KA@T-Online.de
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan_Lange_KA@T-Online.de 2020-03-24 16:35:45 UTC
Created attachment 158951 [details]
zip file with 4 screenshots to show the problem

When OpenGL is activated display output is wrongly rendered in LO 7.0 builds from 2020-03-19 and later (=younger), means User interface and sheet contents are displayed with other fonts resp. font attributes as designed (e.g bold instead normal in the UI). 
To show the problem I have opened the same sheet document with the LO builds from 
/daily/master/Win-x86_64@tb77-TDF/2020-03-18_03.49.36/ and from /daily/master/Win-x86_64@tb77-TDF/2020-03-19_04.02.14/
with and without OpenGL activated. I have made screenshots, contained in the attached zip file.
The wrong rendering only concerns the output on the display. The print output and export e.g. to pdf is made correct.
I can reproduce the problem also with any other sheet documents.
Comment 1 Stefan_Lange_KA@T-Online.de 2020-03-24 18:06:57 UTC
Created attachment 158952 [details]
zip file with 2 screenshots from Writer to show the problem

IMHO the problem also exists in Writer - as shown in the Screenshots in zip file "Screenshots_Writer_Bug_131543.zip".
Comment 2 V Stuart Foote 2020-03-24 20:17:23 UTC
All of your Screen shots show you have the Skia/Vulkan renderer enabled, not OpenGL.

So is this a Skia/Vulkan issue (and maybe also try with Skia/Raster)?
Comment 3 Stefan_Lange_KA@T-Online.de 2020-03-24 20:35:23 UTC
You are right: "Use Skia for all rendering" was checked. 
I had only watched the settings for OpenGL, but not the settings for Skia because the are new in LO 7 and I didn't know this rendering engine until now. 
I will check this bug and also Bug 131547 regarding the settings causing the problems.
Comment 4 Stefan_Lange_KA@T-Online.de 2020-03-24 22:17:03 UTC
Created attachment 158960 [details]
new zip file with screenshots to show the problem, other both zip files are obsolete

The problem exists when both, OpenGL and Skia, are activated/enabled.
With only OpenGL or Skia activted the problem doesn't exist and also not with neither Skia nor OpenGL activated.
The attached zip file contains also the screenshots from the older both zip files, but now with corrected new names.
Comment 5 QA Administrators 2020-03-25 02:41:46 UTC Comment hidden (obsolete)
Comment 6 Stefan_Lange_KA@T-Online.de 2020-03-25 16:05:50 UTC
I am not very familiar with Rendering and therefore I think about if it make sense that both rendering options, OpenGL and Skia, can be activated in the settings for Graphics output.
Comment 7 Commit Notification 2020-03-25 18:16:26 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b275cce0878ddb7a56361c8d626c76ad57ad7d72

make sure only VCL-Skia or VCL-OpenGL is enabled (tdf#131543)

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Stefan_Lange_KA@T-Online.de 2020-03-26 06:22:30 UTC
Test with

Version: 7.0.0.0.alpha0+ (x64)
Build-ID: bc0a111295701ffc940d3e16e0e8b1536af21d8b
CPU-Threads: 4; BS: Windows 10.0 Build 19592; UI-Render: Skia/Vulkan; VCL: win; 
Gebietsschema: de-DE (de_DE); UI-Sprache: de-DE
Calc: threaded

was OK (and also with ... UI-Render: Skia/Raster).